Add trailer_url to Films
